--- a/index.html
+++ b/index.html
@@ -57,15 +57,18 @@
   <div class="intro-label">À propos</div>
   <div class="intro-text">
     <p>
-      Je photographie en argentique.
-      Les images sont prises une à une et ont un charme dans l'acceptation de leur imperfection.<br>
-      Du sujet à la photo, la route est longue et ici je propose un état des lieux à mi-chemin :<br>
-      Après avoir développé les pellicules, les photos sont numérisées, puis traitées, mais ce n'est pas la fin de leur aventure.
-      Pour connaître la suite <a href="https://instagram.com/the0_richard" target="_blank">rendez-vous sur les réseaux.</a>
-    </p>
-    <p>
-      Mon travail tourne autour du quotidien et du portrait : des visages, des rues, des natures mortes ;<br>
-      de la lumière ordinaire rendue extraordinaire par le grain du film. Le quotidien dont je parle, c'est pas celui des sujets, c'est souvent le mien.
+Je photographie en argentique, mais je n’expose pas seulement des images : je documente un chemin.
+Chaque photo est prise une à une. Elle porte le temps, l’attente, l’erreur possible — et l’acceptation de cette imperfection.<br>
+Du déclenchement au négatif, du développement à la numérisation ou au tirage, l’image traverse plusieurs états. Ici, je montre ce moment intermédiaire : un travail en cours, jamais totalement figé.
+Mon regard se pose sur le quotidien et le portrait — des visages, des rues, des natures mortes ; une lumière ordinaire que le grain du film rend presque fragile. Ce quotidien, souvent, c’est le mien.<br>
+Ce site est aussi un espace d’écriture.
+D’un côté, des textes entre l’essai et le carnet : réflexions sur la création, le geste photographique, le rapport au matériel, la lenteur, l’erreur, l’apprentissage.
+De l’autre, des articles plus techniques où je raconte mon parcours en argentique — non pas comme un maître, mais comme un praticien en apprentissage permanent.
+J’y rassemble ce que je comprends, ce que je teste, ce que j’observe chez les grands photographes, et ce que la pratique m’enseigne.
+L’argentique est une matière exigeante : mécanique simple en apparence, chimie précise, choix de films, de produits, méthode de scans puis de traitement numérique,
+      ou de tirages, rebelotte, uen chimie, un papier, une lumière.
+Je partage cette exploration avec ses réussites et ses ratés.<br>
+Ce site est donc un atelier ouvert : un lieu où l’image et le texte avancent ensemble, où la technique nourrit la pensée, et où chaque étape reste visible. Vous êtes évidemment sollicité à contribuer via la page contact ou grace au formulaire de réponse au bas des articles.
     </p>
   </div>
 </section>
