--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <div class="intro-label">À propos</div>
   <div class="intro-text">
     <p>
+[upload du 21/02/2026 : j'ai repris toutes mes photos des six derniers mois que je trouvais bien, et j'ai refais toutes les numérisation et les traitements via Darktable]<br>
 Je photographie en argentique, mais je n’expose pas seulement des images : je documente un chemin.
 Chaque photo est prise une à une. Elle porte le temps, l’attente, l’erreur possible — et l’acceptation de cette imperfection.<br>
 Du déclenchement au négatif, du développement à la numérisation ou au tirage, l’image traverse plusieurs états. Ici, je montre ce moment intermédiaire : un travail en cours, jamais totalement figé.
