--- a/photographie.html
+++ b/photographie.html
@@ -37,7 +37,13 @@
   <!-- GRILLE DE PHOTOS -->
   <!-- Pour ajouter une photo : copiez un bloc <div class="photo-item"> -->
   <!-- dans la bonne section, changez le src et le alt               -->
+
   <div class="photo-grid">
+  <!-- Mention qualité -->
+  <p class="photo-qualite-mention">
+    Photos compressées pour le web —
+    <a href="contact.html">me contacter</a> pour les voir en qualité originale.
+  </p>
 
     <section class="photo-section" id="urbain">
       <h2>Urbain</h2>
