--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- Photo carrée portrait — placez votre fichier dans image/portrait.jpg -->
   <img
-    src="image/portrait.jpg"
+    src="image/autoportrait-crop.jpg"
     alt="Théo Richard"
     class="hero-photo"
     onerror="this.style.display='none'"
