--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ Ce site est donc un atelier ouvert : un lieu où l’image et le texte avancent 
     </div>
   </div>
   <div class="preview-grid" id="previewGrid">
-    <img src="image/preview-1.jpg" alt="Aperçu 1">
-    <img src="image/preview-2.jpg" alt="Aperçu 2">
-    <img src="image/preview-3.jpg" alt="Aperçu 3">
-    <img src="image/preview-4.jpg" alt="Aperçu 4">
+    <img src="image/preview-1.webp" alt="Aperçu 1">
+    <img src="image/preview-2.webp" alt="Aperçu 2">
+    <img src="image/preview-3.webp" alt="Aperçu 3">
+    <img src="image/preview-4.webp" alt="Aperçu 4">
   </div>
 </section>
 
