--- a/photographie.html
+++ b/photographie.html
@@ -28,9 +28,9 @@
 
   <!-- MENU GAUCHE -->
   <nav class="photo-menu" id="photoMenu">
-    <a href="#urbain"    class="menu-link">Urbain</a>
+    <a href="#rue"       class="menu-link">J'ai croisé ça</a>
     <a href="#portraits" class="menu-link">Portraits</a>
-    <a href="#nature"    class="menu-link">Nature</a>
+    <a href="#natures"   class="menu-link">Natures</a>
     <a href="#voyage"    class="menu-link">Voyage</a>
   </nav>
 
@@ -42,24 +42,47 @@
   <!-- Mention qualité -->
   <p class="photo-qualite-mention">
     Photos compressées pour le web —
-    <a href="contact.html">me contacter</a> pour les voir en qualité originale.
+    <a href="contact.html">me contacter</a> pour les voir en qualité originale. Les informations techniques de développement sont rarement renseignées mais peuvent être obtenues sur demande.
   </p>
-
-    <section class="photo-section" id="urbain">
-      <h2>Urbain</h2>
+<!-- ICI SECION PHOTO----------------------------------------ICI SECION PHOTO-------------------------------------------ICI SECION PHOTO---------------------------------ICI SECION PHOTO------------------------------------------ -->
+    <section class="photo-section" id="rue">
+      <h2>J'ai croisé ça</h2>
       <div class="masonry-grid">
-        <div class="photo-item"><img src="https://picsum.photos/800/1040?10" alt="Urbain 1"
-          data-titre="Rue Oberkampf, Paris"
-          data-info="Kodak Tri-X 400 · F8 · 1/125s
-Développé D-76, 20 min à 20°C."></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/620?11" alt="Urbain 2"
-          data-titre="Sous le périph"
-          data-info="Ilford HP5 · F5.6 · 1/60s
-Poussé à 1600 ISO, développé Ilfosol 3."></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/960?12"  alt="Urbain 3"></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/700?13"  alt="Urbain 4"></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/840?14"  alt="Urbain 5"></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/560?15"  alt="Urbain 6"></div>
+       <div class="photo-item">
+<img src="image/3tours.webp" alt="La cathédrale, la tour de l'horloge et la tour Charlemagne"
+data-titre="Les trois tours"
+data-info="Foma 400, rodinal 20°C. Les trois édifices de la ville de Tours visibles depuis une seule petite rue en hauteur, entre deux immeubles.">
+</div>
+        <div class="photo-item">
+<img src="image/baleine.webp" alt="La Baleine bleue sur l'île de Ré"
+data-titre="La Baleine Bleue et les mats des voiliers"
+data-info="Foma 400 classic, pushed 2/3 stop, rodinal 20°C. Session de promenade autour du nouvel an 2026, sur l'île de Ré. Cette photo s'accord sur un triptyque avec le Bistro du Marin et Le Lever du Soleil.">
+</div>
+        <div class="photo-item">
+<img src="image/bancs.webp" alt="Bancs au bord de l'ocean"
+data-titre="Deux bancs au bord de l'océan"
+data-info="Foma 400 classic, pushed 2/3 stop, rodinal 20°C. Session de promenade autour du nouvel an 2026, sur l'île de Ré.
+  Je trouve cette photo particulièrement touchante, avec le banc vide sur la gauche, et les tâches sur le négatif.">
+</div>
+         <div class="photo-item">
+<img src="image/bar1.webp" alt="Une devanture de bar derrière des cordes de voiliers"
+data-titre="Le bistro du marin, et des cordages"
+data-info="Foma 400 classic, pushed 2/3 stop, rodinal 20°C. Session de promenade autour du nouvel an 2026, sur l'île de Ré.
+  Cette photo s'accord avec la photo de la Baleine Bleue, ainsi que celle du Lever du Soleil.">
+</div>
+        <div class="photo-item">
+<img src="image/batiment1.webp" alt="Sommets d'immeubles bas à Tours"
+data-titre="Sommets d'immeubles bas à Tours"
+data-info="Foma 400. Pushed 2 stops. Kodak xtol 20°C. Je n'ai pas réussi à faire honeur à ce négatif. l'équilibrage de la lumière a été bien plus simple au tirage papier que sur traitement du RAW.">
+         <div class="photo-item">
+<img src="image/batiment2.webp" alt="Sommets d'immeubles à La Rochelle"
+data-titre="Sommets d'immeubles bas à La Rochelle"
+data-info="Foma 400. Box Speed. Rodinal 20°C. Le mauvais rincage du négatif a laissé des traces jaunes sur le film. Elles ressortent en bleu. Ce sont des traces du geste qui précède la photo.">
+      </div>
+          <div class="photo-item">
+<img src="image/chientire.webp" alt="Le temps qu'on a"
+data-titre="Le temps qu'on a"
+data-info="Foma 400. Pushed 2/3 de stop. Rodinal 1+50 20°C">
       </div>
     </section>
 
@@ -75,14 +98,35 @@ Poussé à 1600 ISO, développé Ilfosol 3."></div>
       </div>
     </section>
 
-    <section class="photo-section" id="nature">
-      <h2>Nature</h2>
+    <section class="photo-section" id="natures">
+      <h2>Natures</h2>
       <div class="masonry-grid">
-        <div class="photo-item"><img src="https://picsum.photos/800/960?30"  alt="Nature 1"></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/740?31"  alt="Nature 2"></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/850?32"  alt="Nature 3"></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/600?33"  alt="Nature 4"></div>
-        <div class="photo-item"><img src="https://picsum.photos/800/1100?34" alt="Nature 5"></div>
+         <div class="photo-item">
+<img src="image/bancdessus.webp" alt="Un banc au sommet d'une tour, au bord du Cher"
+data-titre="Un banc au sommet d'une tour, au bord du Cher"
+data-info="Foma 400, rodinal 20°C. La lumière m'a permis dans le traitement du raw de complètement effacter l'eau. Il n'y a pas de masquage, le négatif était très contrasté.">
+</div>
+         <div class="photo-item">
+<img src="image/cafetiere.webp" alt="Une cafetière italienne sous un soleil de décembre 2025"
+data-titre="Une cafetière italienne sous un soleil de décembre 2025"
+data-info="Le contraste obtenu grace aux facettes de la cafetière apportent de la richesse dans les noirs. J'aime les textures de cette photo.">
+</div>
+        <div class="photo-item">
+<img src="image/caisse.webp" alt="Une caisse de vêtement laissée pour morte dans la rue"
+data-titre="Une caisse de chiffons et autres hazard laissée ou oubliée"
+data-info="Si le rendu n'est pas idéal car la photo manque de contraste à mon sens, j'aime l'isolation centrale du déchet.">
+</div>
+        <div class="photo-item">
+<img src="image/chemise.webp" alt="Deux chemises qui sèchent dans l'encadrement d'une porte"
+data-titre="Deux chemises qui sèchent dans l'encadrement d'une porte"
+data-info="C'était chez moi. Je suis passé devant plusieurs fois puis, un moment d'égarement, j'ai trouvé ça idéal dans les proportions pour une photo.
+  J'avais mon reflex à portée de main, et j'ai pris la photo depuis ma chaise de bureau.">
+</div>
+        <div class="photo-item">
+<img src="image/dem1.webp" alt="Contre-plongée sur des cartons de déménagement"
+data-titre="Contre-plongée sur des cartons de déménagement"
+data-info="Une des dernières photos que j'ai prises avant de quitter mon appartment">
+</div>
       </div>
     </section>
 
