--- a/photographie.html
+++ b/photographie.html
@@ -400,7 +400,7 @@
                data-info="Description">
         </div>
         <div class="photo-item">
-          <img src="image/escalierbeton.webp" alt=""
+          <img src="image/escalierbet on.webp" alt=""
                data-titre="Titre"
                data-info="Description">
         </div>
@@ -420,13 +420,13 @@
   <button class="lightbox-close" id="lbClose">✕ FERMER</button>
   <button class="lightbox-nav lightbox-prev" id="lbPrev">←</button>
 
-  <!-- Texte à gauche de la photo : titre + infos de développement -->
-  <div class="lb-info" id="lbInfo">
-    <p class="lb-info-titre" id="lbTitre"></p>
-    <p class="lb-info-corps" id="lbCorps"></p>
+  <div class="lb-photo-wrapper">
+    <img src="" alt="" id="lbImg">
+    <div class="lb-info" id="lbInfo">
+      <p class="lb-info-titre" id="lbTitre"></p>
+      <p class="lb-info-corps" id="lbCorps"></p>
+    </div>
   </div>
-
-  <img src="" alt="" id="lbImg">
   <button class="lightbox-nav lightbox-next" id="lbNext">→</button>
   <div class="lightbox-counter" id="lbCounter"></div>
 
