--- a/photographie.html
+++ b/photographie.html
@@ -440,8 +440,14 @@
 </div>
 
 </div>
+<footer class="site-footer">
+  <span>© <span id="annee"></span> Théo Richard — Tous droits réservés.</span>
+  <span>Photos, textes et design protégés par le droit d'auteur.</span>
+</footer>
 
 <script>
+  document.getElementById('annee').textContent = new Date().getFullYear();
+
   var allItems  = Array.from(document.querySelectorAll('.photo-item img'));
   var lightbox  = document.getElementById('lightbox');
   var lbImg     = document.getElementById('lbImg');
